# esp32-sensor-data

./: .gitignore  CMakeLists.txt  README.md  diagram.json  wokwi.toml
components/: CMakeLists.txt
components/dht/: CMakeLists.txt  dht.c  dht.h
components/dht_sensor/: dht_sensor.c  dht_sensor.h
components/i2c_bus/: i2c_bus.c  i2c_bus.h
components/lcd_i2c/: lcd_i2c.c  lcd_i2c.h
components/sd_card/: sd_card.c  sd_card.h
main/: CMakeLists.txt  common.h  esp32-sensor-data.c  main.c
